[tool.poetry]
name = "recursivedescentparser"
version = "0.1.0"
description = ""
authors = ["Shashwat <10794178+TheTrio@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
